# wakeru

./: .gitignore  .markdownlint.json  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_ja.md  SECURITY.md  deny.toml  rustfmt.toml
.cargo/: nextest.toml
.github/workflows/: ci.yml  security.yml
crates/wakeru/: Cargo.toml  README.md
crates/wakeru-api/: Cargo.toml
crates/wakeru-api/src/: lib.rs  main.rs
crates/wakeru-api/src/api/: handlers.rs  mod.rs  routes.rs  state.rs
crates/wakeru-api/src/config/: constants.rs  env.rs  mod.rs
crates/wakeru-api/src/errors/: error_definition.rs  mod.rs
crates/wakeru-api/src/models/: mod.rs  request.rs  response.rs
crates/wakeru-api/src/service/: mod.rs  wakeru_api_service.rs
crates/wakeru-api/tests/: api_integration.rs
crates/wakeru/examples/: example_vibrato_rkyv.rs  example_wakeru.rs
crates/wakeru/src/: config.rs  lib.rs  service.rs
crates/wakeru/src/dictionary/: dictionary_manager.rs  mod.rs
crates/wakeru/src/errors/: error_definition.rs  mod.rs
crates/wakeru/src/indexer/: index_manager.rs  mod.rs  report.rs  schema_builder.rs
crates/wakeru/src/models/: mod.rs  model_definition.rs
crates/wakeru/src/searcher/: bm25_searcher.rs  mod.rs  tokenization.rs
crates/wakeru/src/tokenizer/: mod.rs  vibrato_tokenizer.rs
crates/wakeru/tests/: integration_test.rs  mod.rs
crates/wakeru/tests/dictionary/: dictionary_tests.rs  mod.rs
crates/wakeru/tests/tokenizer/: mod.rs  tokenizer_tests.rs
scripts/: clippy.sh  coverage.sh  largefiles.sh  mdlint.sh  morphol_api_result.json  nextest.sh  run_api.sh  run_api_test.sh  run_example.sh  sample_input_text.json  wakeru_api_result.json
