[package]
name = "wakeru-api"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP API server for the wakeru morphological analysis library"
repository.workspace = true
rust-version.workspace = true
publish = true

[dependencies]
# 自社クレート
wakeru = { version = "0.1.1" }

# Web フレームワーク
axum.workspace = true
tokio = { workspace = true }
tower.workspace = true
tower-http.workspace = true

# シリアライゼーション
serde.workspace = true
serde_json.workspace = true

# 形態素解析
vibrato-rkyv.workspace = true

# ロギング
tracing.workspace = true
tracing-subscriber.workspace = true

# エラーハンドリング
thiserror.workspace = true

[lints]
workspace = true

[features]
default = []
# 辞書ダウンロードを必要とする統合テストを有効化する
# CIではデフォルトで無効（スキップ）、ローカルで明示的に有効化して使用
with_dict_tests = []
