[package]
name = "wakeru-api"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP API server for the wakeru morphological analysis library"
repository.workspace = true
rust-version.workspace = true
publish = true

[dependencies]
# Internal crate
wakeru = { version = "0.1.1" }

# Web Framework
axum.workspace = true
tokio = { workspace = true }
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Morphological Analysis
vibrato-rkyv.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error Handling
thiserror.workspace = true

[lints]
workspace = true

[features]
default = []
# Enable integration tests that require dictionary download
# Default is disabled (skipped) in CI, enable explicitly locally to use
with_dict_tests = []
