[package]
name = "wakeru"
edition = "2024"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
publish = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# vibrato-rkyv
vibrato-rkyv.workspace = true
dirs.workspace = true
tempfile.workspace = true

# tantivy
tantivy.workspace = true
rust-stemmers.workspace = true

[lints]
workspace = true
